fix: :lipstick: Fix contact container shifted left in mobile.

--- a/app/home/contact/contact.module.scss
+++ b/app/home/contact/contact.module.scss
@@ -36,7 +36,7 @@
   }
   @media (max-width: 592px) {
     width: 100vw;
-    translate: -10% 0;
+    // translate: -10% 0;
     min-height: unset;
     margin-top: 0;
   }
